# tradechill

./: .gitignore  README.md  pyproject.toml
assets/: generate_architecture.py
docs/superpowers/plans/: 2026-07-05-tradechill-implementation.md
tradechill/: __init__.py  __main__.py  cli.py  cooldown.py  dashboard.py  db.py  impulse.py  portfolio.py  review.py  trap_detector.py  utils.py
