[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tradechill"
version = "0.1.0"
description = "交易冷静期助手 - 帮助个人投资者管理交易情绪，强制冷静期"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["investment", "trading", "emotion-management", "cli"]
authors = [
    {name = "TradeChill Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/Hatsume0202/tradechill"

[project.scripts]
tradechill = "tradechill.cli:app"

[tool.setuptools.packages.find]
include = ["tradechill*"]
